[package]
name = "minips-rs"
version = "0.1.0"
authors = ["Edu Renesto <edure95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
color-eyre = "0.5"
goblin = { features = ["std", "elf32"], version = "0.3" }
minips-macros = { path = "minips-macros" }
log = "0.4"
simple_logger = "1.11"
rand = "0.8"

[profile.release]
debug = true
